--- a/netty5/pom.xml
+++ b/netty5/pom.xml
@@ -12,6 +12,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>3.2.13.RELEASE</spring.version>
 	</properties>
 
 	<dependencies>
@@ -32,6 +33,19 @@
 			<groupId>org.jboss.marshalling</groupId>
 			<artifactId> jboss-marshalling-serial</artifactId>
 			<version>2.0.0.Beta2</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+			<version>2.10.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${spring.version}</version>
 		</dependency>
 
 		<dependency>
