--- a/netty5/pom.xml
+++ b/netty5/pom.xml
@@ -48,6 +48,17 @@
 			<version>${spring.version}</version>
 		</dependency>
 
+<dependency>
+	<groupId>org.jibx</groupId>
+	<artifactId>jibx-bind</artifactId>
+	<version>1.2.6</version>
+</dependency>
+
+<dependency>
+	<groupId>com.google.protobuf</groupId>
+	<artifactId>protobuf-java</artifactId>
+	<version>2.6.1</version>
+</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
