--- a/netty5/pom.xml
+++ b/netty5/pom.xml
@@ -59,6 +59,19 @@
 	<artifactId>protobuf-java</artifactId>
 	<version>2.6.1</version>
 </dependency>
+<!-- <dependency>
+	<groupId>org.json</groupId>
+	<artifactId>json</artifactId>
+	<version>20151123</version>
+</dependency> -->
+
+
+<dependency>
+	<groupId>com.alibaba</groupId>
+	<artifactId>fastjson</artifactId>
+	<version>1.1.15</version>
+</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
