--- a/netty5/pom.xml
+++ b/netty5/pom.xml
@@ -19,6 +19,18 @@
 
 
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>16.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 			<version>5.0.0.Alpha1</version>
@@ -48,38 +60,31 @@
 			<version>${spring.version}</version>
 		</dependency>
 
-<!-- <dependency>
-	<groupId>org.jibx</groupId>
-	<artifactId>jibx-bind</artifactId>
-	<version>1.2.6</version>
-</dependency>
- -->
-  <dependency>
-      <groupId>com.thoughtworks.xstream </groupId>
-      <artifactId>xstream</artifactId>
-      <version>1.4.7</version>
-      <scope>compile</scope>
-    </dependency>
-    
-<dependency>
-	<groupId>com.google.protobuf</groupId>
-	<artifactId>protobuf-java</artifactId>
-	<version>2.6.1</version>
-</dependency>
+		<!-- <dependency> <groupId>org.jibx</groupId> <artifactId>jibx-bind</artifactId> 
+			<version>1.2.6</version> </dependency> -->
+		<dependency>
+			<groupId>com.thoughtworks.xstream </groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.4.7</version>
+			<scope>compile</scope>
+		</dependency>
 
-    
-<!-- <dependency>
-	<groupId>org.json</groupId>
-	<artifactId>json</artifactId>
-	<version>20151123</version>
-</dependency> -->
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>2.6.1</version>
+		</dependency>
 
 
-<dependency>
-	<groupId>com.alibaba</groupId>
-	<artifactId>fastjson</artifactId>
-	<version>1.1.15</version>
-</dependency>
+		<!-- <dependency> <groupId>org.json</groupId> <artifactId>json</artifactId> 
+			<version>20151123</version> </dependency> -->
+
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.1.15</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
