--- a/netty5/pom.xml
+++ b/netty5/pom.xml
@@ -18,6 +18,16 @@
 	<dependencies>
 
 
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.6.11</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.6.11</version>
+		</dependency>
 
 		<dependency>
 			<groupId>log4j</groupId>
