--- a/netty5/pom.xml
+++ b/netty5/pom.xml
@@ -17,7 +17,11 @@
 
 	<dependencies>
 
-
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-remote_2.11</artifactId>
+			<version>2.3.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>log4j</groupId>
