--- a/netty5/pom.xml
+++ b/netty5/pom.xml
@@ -108,10 +108,17 @@
 			<version>1.1.15</version>
 		</dependency>
 
+
+<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.12.5</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.5</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
