生成带有logo的二维码test

--- a/netty5/pom.xml
+++ b/netty5/pom.xml
@@ -18,6 +18,12 @@
 	<dependencies>
 
 
+<dependency>
+    <groupId>com.google.zxing</groupId>
+    <artifactId>core</artifactId>
+    <version>3.1.0</version>
+</dependency>
+
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
 			<artifactId>akka-remote_2.11</artifactId>
