--- a/netty5/pom.xml
+++ b/netty5/pom.xml
@@ -12,11 +12,23 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>3.2.13.RELEASE</spring.version>
+		<spring.version>3.2.16.RELEASE</spring.version>
 	</properties>
 
 	<dependencies>
 
+<dependency>
+	<groupId>net.sourceforge.jexcelapi</groupId>
+	<artifactId>jxl</artifactId>
+	<version>2.6.10</version>
+</dependency>
+
+
+<dependency>
+    <groupId>com.belerweb</groupId>
+    <artifactId>pinyin4j</artifactId>
+    <version>2.5.0</version>
+</dependency>
 
 <dependency>
     <groupId>com.google.zxing</groupId>
