--- a/netty5/pom.xml
+++ b/netty5/pom.xml
@@ -16,14 +16,14 @@
 	</properties>
 
 	<dependencies>
-
+  <!-- 
 <dependency>
 	<groupId>net.sourceforge.jexcelapi</groupId>
 	<artifactId>jxl</artifactId>
-	<version>2.6.10</version>
+	<version>2.6.12</version>
 </dependency>
 
-
+ 
 <dependency>
     <groupId>com.belerweb</groupId>
     <artifactId>pinyin4j</artifactId>
@@ -34,7 +34,7 @@
     <groupId>com.google.zxing</groupId>
     <artifactId>core</artifactId>
     <version>3.1.0</version>
-</dependency>
+</dependency>-->
 
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
@@ -158,6 +158,12 @@
 			<version>1.0.8</version>
 		</dependency>
 
+	<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.20.0-GA</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
