去掉部分多余功能

--- a/netty5/pom.xml
+++ b/netty5/pom.xml
@@ -16,6 +16,13 @@
 	</properties>
 
 	<dependencies>
+	
+	<dependency>
+	<groupId>c.z</groupId>
+	<artifactId>z-common</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+</dependency>
+
   <!-- 
 <dependency>
 	<groupId>net.sourceforge.jexcelapi</groupId>
