--- a/netty5/pom.xml
+++ b/netty5/pom.xml
@@ -12,7 +12,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>3.2.16.RELEASE</spring.version>
+		<spring.version>3.2.2.RELEASE</spring.version>
 	</properties>
 
 	<dependencies>
@@ -21,6 +21,27 @@
 	<groupId>c.z</groupId>
 	<artifactId>z-common</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+</dependency>
+
+
+
+<!-- <dependency>
+    <groupId>aspectj</groupId>
+    <artifactId>aspectjrt</artifactId>
+    <version>1.5.4</version>
+</dependency>
+
+
+<dependency>
+    <groupId>org.aspectj</groupId>
+    <artifactId>aspectjweaver</artifactId>
+    <version>1.8.9</version>
+</dependency> -->
+
+<dependency>
+    <groupId>org.apache.camel</groupId>
+    <artifactId>camel-core</artifactId>
+    <version>2.16.1</version>
 </dependency>
 
   <!-- 
