--- a/data-struct/pom.xml
+++ b/data-struct/pom.xml
@@ -12,10 +12,18 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.compilerVersion>1.7</maven.compiler.compilerVersion>
 	</properties>
 
 	<dependencies>
 
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>2.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>io.netty</groupId>
@@ -37,7 +45,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.9</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
