--- a/netty5/pom.xml
+++ b/netty5/pom.xml
@@ -12,57 +12,37 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.compilerVersion>1.7</maven.compiler.compilerVersion>
 		<spring.version>3.2.2.RELEASE</spring.version>
 	</properties>
 
 	<dependencies>
-	
-	<dependency>
-	<groupId>c.z</groupId>
-	<artifactId>z-common</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-</dependency>
+
+		<!-- <dependency>
+			<groupId>c.z</groupId>
+			<artifactId>z-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency> -->
 
 
 
-<!-- <dependency>
-    <groupId>aspectj</groupId>
-    <artifactId>aspectjrt</artifactId>
-    <version>1.5.4</version>
-</dependency>
+		<!-- <dependency> <groupId>aspectj</groupId> <artifactId>aspectjrt</artifactId> 
+			<version>1.5.4</version> </dependency> <dependency> <groupId>org.aspectj</groupId> 
+			<artifactId>aspectjweaver</artifactId> <version>1.8.9</version> </dependency> -->
 
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-core</artifactId>
+			<version>2.16.1</version>
+		</dependency>
 
-<dependency>
-    <groupId>org.aspectj</groupId>
-    <artifactId>aspectjweaver</artifactId>
-    <version>1.8.9</version>
-</dependency> -->
-
-<dependency>
-    <groupId>org.apache.camel</groupId>
-    <artifactId>camel-core</artifactId>
-    <version>2.16.1</version>
-</dependency>
-
-  <!-- 
-<dependency>
-	<groupId>net.sourceforge.jexcelapi</groupId>
-	<artifactId>jxl</artifactId>
-	<version>2.6.12</version>
-</dependency>
-
- 
-<dependency>
-    <groupId>com.belerweb</groupId>
-    <artifactId>pinyin4j</artifactId>
-    <version>2.5.0</version>
-</dependency>
-
-<dependency>
-    <groupId>com.google.zxing</groupId>
-    <artifactId>core</artifactId>
-    <version>3.1.0</version>
-</dependency>-->
+		<!-- <dependency> <groupId>net.sourceforge.jexcelapi</groupId> <artifactId>jxl</artifactId> 
+			<version>2.6.12</version> </dependency> <dependency> <groupId>com.belerweb</groupId> 
+			<artifactId>pinyin4j</artifactId> <version>2.5.0</version> </dependency> 
+			<dependency> <groupId>com.google.zxing</groupId> <artifactId>core</artifactId> 
+			<version>3.1.0</version> </dependency> -->
 
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
@@ -75,11 +55,8 @@
 			<artifactId>aspectjrt</artifactId>
 			<version>1.6.11</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjweaver</artifactId>
-			<version>1.6.11</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.aspectj</groupId> <artifactId>aspectjweaver</artifactId> 
+			<version>1.6.11</version> </dependency> -->
 
 		<dependency>
 			<groupId>log4j</groupId>
@@ -186,12 +163,12 @@
 			<version>1.0.8</version>
 		</dependency>
 
-	<dependency>
+		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
 			<version>3.20.0-GA</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
